--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^2.1.0",
     "react-modal": "^3.4.4",
     "react-moment": "^0.7.0",
+    "react-popper": "^1.0.0-beta.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
