--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "draft-js-export-html": "^1.2.0",
     "draftjs-to-html": "^0.8.4",
     "immutable": "^3.8.2",
+    "instantsearch.css": "^7.1.0",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "material-ui": "^1.0.0-beta.45",
