--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-facebook-login": "^4.0.1",
     "react-instantsearch": "^5.0.3",
     "react-loader-spinner": "^2.1.0",
     "react-modal": "^3.4.4",
