--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "mongoolia": "^1.0.3",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
     "passport-jwt": "^4.0.0",
     "react-medium-editor": "^1.8.1",
     "validator": "^10.1.0"
