--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-facebook-login": "^4.0.1",
+    "react-infinite-scroller": "^1.1.4",
     "react-instantsearch": "^5.0.3",
     "react-loader-spinner": "^2.1.0",
     "react-modal": "^3.4.4",
@@ -37,6 +38,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-share": "^2.2.0",
     "react-table": "^6.8.2",
     "redraft": "^0.10.1",
     "redux": "^4.0.0",
